ggj25 post-mortem [draft]

--- a/assets/scss/abstract/styles.scss
+++ b/assets/scss/abstract/styles.scss
@@ -30,7 +30,11 @@ body {
     border-color: $color-orange !important;
 }
 
-ul:not(.nav) {
+.list-unstyled li {
+    list-style-type: none !important;
+}
+
+ul:not(.nav)  {
     list-style-type: square;
 }
 
