--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -89,7 +89,7 @@
 
         <article class="card">
             <div class="card-header">
-                <h4 class="card-title">Latest News Article</h4>
+                <h4 class="card-title">Latest Blog Post</h4>
                 <hr />
                 {{ partial "article-meta.html" . }}
             </div>
