--- a/layouts/partials/article-meta.html
+++ b/layouts/partials/article-meta.html
@@ -5,7 +5,7 @@
     </div>
 
     <div>
-        <div class="post-meta ">
+        <div class="post-meta " style="overflow: hidden; white-space: nowrap;">
             <span class="fa-layers fa-fw">
                 <i class="i fa-sharp-duotone fa-solid fa-calendar"></i>
                 <span class="fa-layers-text fa-inverse --fa-right" data-fa-transform="shrink-8 down-3"
