--- a/layouts/events/single.html
+++ b/layouts/events/single.html
@@ -8,7 +8,8 @@
 
 {{ define "main" -}}
 
-{{ $drinkupImg := resources.Get "images/events/event-drinkup.png" }}
+{{ $socialImg := resources.Get "images/events/event-social.png" }}
+{{ $demosImg := resources.Get "images/events/event-demos.png" }}
 {{ $genericImg := resources.Get "images/events/event-generic.png" }}
 
 <section class="d-flex flex-column">
@@ -58,7 +59,8 @@
                         <div class="col d-flex align-items-stretch">
                             <div class="card border-color-orange">
 
-                                <img src="{{- if strings.Contains $event.name " DrinkUp" }}{{ $drinkupImg.RelPermalink }}{{
+                                <img src="{{- if strings.Contains $event.name " Social" }}{{ $socialImg.RelPermalink }}
+                                {{- if strings.Contains $event.name " Share" }}{{ $demosImg.RelPermalink }}{{
                                     else }}{{ $genericImg.RelPermalink }}{{ end }}" class="card-img-top" alt="Event Image">
                                 <div class="card-body d-flex flex-column ">
                                     <p class="h3 card-text text-center">{{ $event.name }}</p>
