--- a/assets/scss/_stlgd.scss
+++ b/assets/scss/_stlgd.scss
@@ -54,3 +54,14 @@ $nav-link-font-size:                1.125rem;
 $nav-link-font-weight:              bold;
 $nav-link-color:                    $color-orange;
 $nav-link-hover-color:              $color-yellow;
+
+$font-weight-lighter:         50;
+$font-weight-light:           75;
+$font-weight-normal:          100;
+$font-weight-medium:          200;
+$font-weight-semibold:        400;
+$font-weight-bold:            600;
+$font-weight-bolder:          800;
+
+$font-weight-base:            $font-weight-normal;
+
