--- a/layouts/events/single.html
+++ b/layouts/events/single.html
@@ -8,6 +8,11 @@
 
 {{ define "main" -}}
 
+<section class="container">
+    <p>Please Excuse the Mess! We are working on overhauling our Events system.</p>
+    <p>In the meantime, please visit our <a href="https://www.meetup.com/st-louis-game-developers/"><i class="fa-brands fa-meetup"></i> Meetup Group</a> for our upcoming events.</p>
+</section>
+
 {{ $socialImg := resources.Get "images/events/event-social.png" }}
 {{ $demosImg := resources.Get "images/events/event-demos.png" }}
 {{ $genericImg := resources.Get "images/events/event-generic.png" }}
