--- a/layouts/partials/next-event.html
+++ b/layouts/partials/next-event.html
@@ -1,52 +1,40 @@
-<section class="container">
-    <p>Please Excuse the Mess! We are working on overhauling our Events system.</p>
-    <p>In the meantime, please visit our <a href="https://www.meetup.com/st-louis-game-developers/"><i class="fa-brands fa-meetup"></i> Meetup Group</a> for our upcoming events.</p>
+{{- $now := time.Now -}}
+{{- $events := slice -}}
+
+{{- range .Site.Data.events -}}
+{{- $eventTime := time .dateTime -}}
+{{- if ge $eventTime $now -}}
+{{- $events = $events | append (dict
+"title" .title
+"date" $eventTime
+"description" .description
+"link" .eventUrl
+) -}}
+{{- end -}}
+{{- end -}}
+
+{{- if gt (len $events) 0 -}}
+{{- range first 1 (sort $events "date") -}}
+<section class="container p-3">
+    <h2 class="text-center">{{ .title }}</h2>
+    <p class="text-center">
+        <strong>{{ time.Format ":date_long" .date }}</strong><br>
+        {{ time.Format ":time_short" .date }}
+    </p>
+
+    {{/* Auto-link plain URLs in Markdown before rendering */}}
+    {{- $linkedDesc := replaceRE `https?://[^\s]+` `<$0>` .description -}}
+        <div>{{ $linkedDesc | markdownify }}</div>
+
+        <p class="text-center mt-3">
+            <a href="{{ .link }}" class="btn btn-outline-primary" target="_blank">
+                <i class="fa-brands fa-meetup"></i> View on Meetup
+            </a>
+        </p>
 </section>
-
-{{- $today := ((time.Format "2006-01-02" time.Now ) | time ) -}}
-
-{{ $drinkupImg := resources.Get "images/events/event-drinkup.png" }}
-{{ $genericImg := resources.Get "images/events/event-generic.png" }}
-
-
-    {{- $eventsRaw := .Site.Data.events -}}
-    {{- $events := slice -}}
-    {{- range $eventRaw := $eventsRaw -}}
-    {{- $rawD := ((time.Format "2006-01-02" (index $eventRaw 3) ) | time ) -}}
-    {{- if (ge $rawD $today ) -}}
-    {{- $events = $events | append (dict
-    "internal_id" (index $eventRaw 0)
-    "created" (index $eventRaw 1)
-    "name" (index $eventRaw 2)
-    "when" (index $eventRaw 3)
-    "where" (index $eventRaw 4)
-    "meetup" (index $eventRaw 5)
-    "desc" (index $eventRaw 6)
-    )
-    -}}
-    {{ end }}
-    {{ end }}
-
-    {{- if $events -}}
-
-    {{- range $event := first 1 (sort $events "when" "asc") -}}
-    <img src="{{- if strings.Contains $event.name "DrinkUp" }}{{ $drinkupImg.RelPermalink }}{{ else }}{{ $genericImg.RelPermalink }}{{ end }}" class="img-fluid" alt="Event Image">
-        <dl class="p-3 m-0">
-            
-            <dt class="h4 text-center">{{ $event.name }}</dt>
-            <dt class="h3 text-center">{{ time.Format ":date_short" $event.when }} - {{ time.Format ":time_short" $event.when }}</dt>
-            <dd class=""><em>Where:</em> {{ $event.where }}</dd>
-            <dd class="">{{ $event.desc }}</dd>
-            {{ if $event.meetup }}
-            <dd class="text-center"><a href="https://www.meetup.com/st-louis-game-developers/events/{{ $event.meetup }}/" class="btn btn-outline-primary" target="_blank"><i class="i fa-brands fa-meetup"></i> RSVP</a></dd>
-            {{ end }}
-
-        </dl>
-
-    {{ end}}
-    
+{{- end -}}
 {{- else -}}
-
+<section class="container p-3">
     <p class="text-center">No upcoming events</p>
-
+</section>
 {{- end -}}
