--- a/layouts/events/single.html
+++ b/layouts/events/single.html
@@ -1,6 +1,5 @@
 {{ define "header" }}
-<div class="row text-center  simple-bar rounded m-4 p-3 border d-flex justify-content-evenly">
-    {{/* <i class="i corner-icon ci-top-right fa-sharp-duotone fa-solid fa-calendar-days fa-6x "></i> */}}
+<div class="row text-center simple-bar rounded m-4 p-3 border d-flex justify-content-evenly">
     <h1 class="font-weight-light text-center">Upcoming Events</h1>
     <p class="lead text-center">This is a list of our upcoming events</p>
 </div>
@@ -8,90 +7,80 @@
 
 {{ define "main" -}}
 
-<section class="container">
-    <p>Please Excuse the Mess! We are working on overhauling our Events system.</p>
-    <p>In the meantime, please visit our <a href="https://www.meetup.com/st-louis-game-developers/"><i class="fa-brands fa-meetup"></i> Meetup Group</a> for our upcoming events.</p>
-</section>
-
 {{ $socialImg := resources.Get "images/events/event-social.png" }}
 {{ $demosImg := resources.Get "images/events/event-demos.png" }}
 {{ $genericImg := resources.Get "images/events/event-generic.png" }}
 
 <section class="d-flex flex-column">
-
     {{- $today := ((time.Format "2006-01-02" time.Now ) | time ) -}}
-
     {{- $eventsRaw := .Site.Data.events -}}
     {{- $events := slice -}}
+
     {{- range $eventRaw := $eventsRaw -}}
-    {{- $rawD := ((time.Format "2006-01-02" (index $eventRaw 3) ) | time ) -}}
-    {{- if (ge $rawD $today ) -}}
+    {{- $eventTime := (time.AsTime $eventRaw.dateTime) -}}
+    {{- $eventDate := (time.Format "2006-01-02" $eventTime | time) -}}
+    {{- if (ge $eventDate $today) -}}
     {{- $events = $events | append (dict
-    "internal_id" (index $eventRaw 0)
-    "created" (index $eventRaw 1)
-    "name" (index $eventRaw 2)
-    "when" (index $eventRaw 3)
-    "where" (index $eventRaw 4)
-    "meetup" (index $eventRaw 5)
-    "desc" (index $eventRaw 6)
-    )
-    -}}
+    "name" $eventRaw.title
+    "desc" $eventRaw.description
+    "when" $eventRaw.dateTime
+    "where" $eventRaw.location
+    "meetup" ($eventRaw.eventUrl | strings.TrimPrefix "https://www.meetup.com/st-louis-game-developers/events/" |
+    strings.TrimSuffix "/")
+    ) -}}
     {{ end }}
     {{ end }}
 
-    {{- if $events -}}
-
+    {{ if gt (len $events) 0 }}
     {{- $lastDate := "" -}}
-    {{- $lastTime := "" -}}
     {{- range $event := (sort $events "when" "asc") -}}
-        {{- $rawDate := time.AsTime $event.when -}}
-        {{- $eventDate := time.Format "January 2006" $rawDate -}}
-        {{- if (ne $lastDate $eventDate) -}}
-            {{- if (ne $lastDate "") -}}
-        </div>
-        </div>
-        </div>
-        </div>
-        {{- end -}}
-        {{ $lastDate = $eventDate }}
-        <div class="event-month my-3">
-            <h2>{{ $eventDate }}</h2>
+    {{- $rawDate := time.AsTime $event.when -}}
+    {{- $eventDate := time.Format "January 2006" $rawDate -}}
+    {{- if (ne $lastDate $eventDate) -}}
+    {{- if (ne $lastDate "") -}}
+    </div>
+    </div>
+    </div>
+    </div>
+    {{- end -}}
+    {{ $lastDate = $eventDate }}
+    <div class="event-month my-3">
+        <h2>{{ $eventDate }}</h2>
+        <div class="event-list">
+            <div class="container-fluid">
+                <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-3">
+                    {{ end }}
 
-            <div class="event-list">
-                <div class="container-fluid">
-                    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-3">
-                        {{ end }}
-                        <div class="col d-flex align-items-stretch">
-                            <div class="card border-color-orange">
-
-                                <img src="{{- if strings.Contains $event.name " Social" }}{{ $socialImg.RelPermalink }}
-                                    {{- else if strings.Contains $event.name " Share" }}{{ $demosImg.RelPermalink }}
-                                    {{ else }}{{ $genericImg.RelPermalink }}{{ end }}" class="card-img-top" alt="Event Image">
-                                <div class="card-body d-flex flex-column ">
-                                    <p class="h3 card-text text-center">{{ $event.name }}</p>
-                                    <p class="h4 card-text text-center">{{ time.Format "Jan 2" $rawDate }} - {{
-                                        time.Format
-                                        ":time_short" $rawDate }}</p>
-                                    <p class="card-text "><em>Where:</em> {{ $event.where }}</p>
-                                    <p class="card-text ">{{ $event.desc }}</p>
-                                    {{ if $event.meetup }}
-                                    <div class="card-text text-center mt-auto"><a
-                                            href="https://www.meetup.com/st-louis-game-developers/events/{{ $event.meetup }}/"
-                                            class="btn btn-outline-primary" target="_blank"><i class="i fa-brands fa-meetup"></i> RSVP</a>
-                                    </div>
-                                    {{ end }}
-
-
+                    <div class="col d-flex align-items-stretch">
+                        <div class="card border-color-orange">
+                            <img src="{{- if strings.Contains $event.name " Social" }}{{ $socialImg.RelPermalink }} {{-
+                                else if strings.Contains $event.name " Share" }}{{ $demosImg.RelPermalink }} {{ else
+                                }}{{ $genericImg.RelPermalink }}{{ end }}" class="card-img-top" alt="Event Image">
+                            <div class="card-body d-flex flex-column">
+                                <p class="h3 card-text text-center">{{ $event.name }}</p>
+                                <p class="h4 card-text text-center">{{ time.Format "Jan 2" $rawDate }} – {{ time.Format
+                                    ":time_short" $rawDate }}</p>
+                                <p class="card-text"><em>Where:</em> {{ $event.where }}</p>
+                                <p class="card-text">{{ $event.desc }}</p>
+                                {{ if $event.meetup }}
+                                <div class="card-text text-center mt-auto">
+                                    <a href="https://www.meetup.com/st-louis-game-developers/events/{{ $event.meetup }}/"
+                                        class="btn btn-outline-primary" target="_blank">
+                                        <i class="i fa-brands fa-meetup"></i> RSVP
+                                    </a>
                                 </div>
+                                {{ end }}
                             </div>
                         </div>
-                        {{- end -}}
                     </div>
+                    {{- end -}}
                 </div>
             </div>
         </div>
-    {{- else -}}
-        <p class="text-center">No upcoming events</p>
-    {{- end -}}
+    </div>
+    {{ else }}
+    <p class="text-center">No upcoming events</p>
+    {{ end }}
 </section>
+
 {{- end }}
