--- a/layouts/events/single.html
+++ b/layouts/events/single.html
@@ -12,18 +12,23 @@
 {{ $genericImg := resources.Get "images/events/event-generic.png" }}
 
 <section class="d-flex flex-column">
-    {{- $today := ((time.Format "2006-01-02" time.Now ) | time ) -}}
+    {{- $layout := "2006-01-02T15:04:05-07:00" -}}
+    {{- $today := now -}}
+    {{- $today = ($today | time.In "America/Chicago" | time.Format $layout) -}}
+    {{- $today = (time.Format "2006-01-02" $today | time) -}}
+    
     {{- $eventsRaw := .Site.Data.events -}}
     {{- $events := slice -}}
 
     {{- range $eventRaw := $eventsRaw -}}
-    {{- $eventTime := (time.AsTime $eventRaw.dateTime) -}}
+    {{- $eventTime := time.AsTime $eventRaw.dateTime -}}
+    {{- $eventTime = ($eventTime | time.In "America/Chicago" | time.Format $layout) -}}
     {{- $eventDate := (time.Format "2006-01-02" $eventTime | time) -}}
     {{- if (ge $eventDate $today) -}}
     {{- $events = $events | append (dict
     "name" $eventRaw.title
     "desc" $eventRaw.description
-    "when" $eventRaw.dateTime
+    "when" $eventTime
     "where" $eventRaw.location
     ) -}}
     {{ end }}
