--- a/layouts/partials/next-event.html
+++ b/layouts/partials/next-event.html
@@ -1,13 +1,12 @@
 {{- $layout := "2006-01-02T15:04:05-07:00" -}}
-{{- $today := now -}}
-{{- $today = ($today | time.In "America/Chicago" | time.Format $layout) -}}
+
+{{- $today := now | time.Format $layout -}}
 
 {{- $eventsRaw := .Site.Data.events -}}
 {{- $upcoming := slice -}}
 
 {{- range $event := $eventsRaw }}
-  {{- $eventTime := time.AsTime $event.dateTime -}}
-  {{- $eventTime = ($eventTime | time.In "America/Chicago" | time.Format $layout) -}}
+  {{- $eventTime := time.AsTime $event.dateTime | time.Format $layout -}}
 
   {{- if ge $eventTime $today -}}
     {{- $upcoming = $upcoming | append (dict
