--- a/layouts/partials/next-event.html
+++ b/layouts/partials/next-event.html
@@ -43,25 +43,29 @@
         
         {{- $description := $next.description | safeHTML -}}
 
-        {{- $matches := findRESubmatch `[<br>]+For full details, including the address, and to RSVP see: <a href="([^"]+)"[^>]*>[^<]+</a>` $description -}}
+        {{/* Match and extract the event ID from the RSVP section */}}
+        {{- $regex := `(?s)(<br\s*/?>)*\s*For full details, including the address, and to RSVP see:(?:.*)(?:<a[^>]*href=")?https://www\.meetup\.com/st-louis-game-developers/events/([0-9]+)/?(?:".*?>.*?</a>)?` -}}
+
+        {{- $matches := findRESubmatch $regex $description -}}
 
         {{- if gt (len $matches) 0 -}}
-          {{- $match := index $matches 0 -}}         {{/* first full match group */}}
-          {{- $fullMatch := index $match 0 -}}       {{/* entire match string */}}
-          {{- $url := index $match 1 -}}             {{/* captured URL */}}
+          {{- $firstMatch := index $matches 0 -}}          {{/* the inner []string */}}
+          {{- $fullMatch := index $firstMatch 0 -}}        {{/* full matched string */}}
+          {{- $eventID := index $firstMatch 1 -}}          {{/* captured group with event ID */}}
 
           {{- $cleanDescription := replace $description $fullMatch "" -}}
 
           <dd class="">{{ $cleanDescription | safeHTML }}</dd>
           <div class="mt-3 text-center">
-            <a href="{{ $url }}" class="btn btn-primary" target="_blank" rel="noopener">RSVP</a>
+            <a href="https://www.meetup.com/st-louis-game-developers/events/{{ $eventID }}" class="btn btn-primary" target="_blank" rel="noopener">
+              Details & RSVP
+            </a>
           </div>
         {{- else -}}
           <dd class="">{{ $description }}</dd>
         {{- end }}
 
 
-        
     </dl>
 </section>
 {{ else }}
