--- a/layouts/events/single.html
+++ b/layouts/events/single.html
@@ -88,15 +88,13 @@
                                 {{- if gt (len $matches) 0 -}}
                                     {{- $firstMatch := index $matches 0 -}}          {{/* the inner []string */}}
                                     {{- $fullMatch := index $firstMatch 0 -}}        {{/* full matched string */}}
-                                    {{- $eventID := index $firstMatch 1 -}}          {{/* captured group with event ID */}}
+                                    {{- $eventID := index $firstMatch 2 -}}          {{/* captured group with event ID */}}
 
                                     {{- $cleanDescription := replace $description $fullMatch "" -}}
 
                                     <p class="card-text">{{ $cleanDescription | safeHTML }}</dd>
                                     <div class="mt-3 text-center">
-                                        <a href="https://www.meetup.com/st-louis-game-developers/events/{{ $eventID }}" class="btn btn-primary" target="_blank" rel="noopener">
-                                        Details & RSVP
-                                        </a>
+                                        <a href="https://www.meetup.com/st-louis-game-developers/events/{{ $eventID }}" class="btn btn-primary" target="_blank" rel="noopener">Details & RSVP</a>
                                     </div>
                                 {{- else -}}
                                     <p class="card-text">{{ $description }}</dd>
