added colin's blog post

--- a/assets/scss/abstract/styles.scss
+++ b/assets/scss/abstract/styles.scss
@@ -260,3 +260,13 @@ header {
         display: inline !important;
     }
 }
+
+pre  {
+    background-color: black;
+    padding: 1rem;
+    code {
+        word-break:normal;
+    }
+}
+
+
