--- a/layouts/partials/toc.html
+++ b/layouts/partials/toc.html
@@ -1,5 +1,5 @@
 <div class="toc sticky-top justify-items-center border-start px-3 mb-3 mb-lg-0">
-    <h3>Contents</h3>
+    <h3 class="pt-0">Contents</h3>
     {{ .TableOfContents }}
     <div class="text-small d-none d-lg-block"><a href="#title" class="icon-link">Back to top <i
                 class="i fa-sharp-duotone fa-solid fa-square-up"></i></a></div>
